correction aio system

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,8 @@
+/banned_ips.properties
+/clans.properties
+/custom.properties
+/events.properties
+/geoengine.properties
+/logging.properties
+/loginserver.properties
 /net/
