--- a/bin/custom.properties
+++ b/bin/custom.properties
@@ -94,3 +94,28 @@ SiegeSchuttgart = 7
 # Next siege date, delay in days
 # Default: 14 [2 weeks]
 SiegeInterval = 14
+
+#=============================================================
+#                         Tournament
+#=============================================================
+# Tournament Enabled
+# Default: False
+Enabled = True
+# Duration of match.
+# Value in minutes
+duration = 5
+# Matches. Ex 2 means 2v2, 4 means 4v4 e.t.c (Unlimited number)
+Matches= 2,3,4
+Team1Location = 553,515,-5235
+Team2Location = 553,515,-5235
+Rewards = 57,100;6393,100
+
+#=============================================================
+#                         /epics Command
+#=============================================================
+# Enable /epic command for players
+# Default: False
+EpicCommandEnabled = True
+# Enable Boss status change announcement
+# Default: False
+AnnounceBossStatus = True
