--- a/config/custom.properties
+++ b/config/custom.properties
@@ -100,7 +100,7 @@ SiegeInterval = 14
 #=============================================================
 # Tournament Enabled
 # Default: False
-Enabled = True
+Enabled = true
 # Duration of match.
 # Value in minutes
 duration = 5
@@ -111,7 +111,7 @@ Team2Location = 553,515,-5235
 Rewards = 57,100;6393,100
 
 #=============================================================
-#                         /epics Command
+#                       Epics Command
 #=============================================================
 # Enable /epic command for players
 # Default: False
@@ -119,3 +119,27 @@ EpicCommandEnabled = True
 # Enable Boss status change announcement
 # Default: False
 AnnounceBossStatus = True
+
+#=============================================================
+#                          Captcha
+#=============================================================
+
+# Bots prevention system.
+EnableBotsPrevention = True
+# How many monsters have to be killed to run validation task?
+KillsCounter = 15
+# Specify range of randomly taken values summed with main counter.
+KillsCounterRandomization = 50
+# How long validation window awaits an answer? (in seconds)
+ValidationTime = 60
+# Punishments:
+#      0 = move character to the closest village.
+#      1 = kick characters from the server.
+#      2 = put character to jail.
+#      3 = ban character from the server.
+Punishment = 0
+# How long character were suppose to stay in jail? (in minutes)
+PunishmentTime = 60
+
+# Basic protection against L2Walker.
+L2WalkerProtection = False
